k8s/external-dns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.k8s.io/external-dns/external-dns:v0.20.0
        args:
        - --source=gateway-httproute
        - --namespace=default
        - --provider=webhook
        - --domain-filter=h3rmt.dev # Will only manage DNS records for this domain
        - --txt-owner-id=k3s-cluster # Unique identifier for this cluster
        - --policy=sync # or 'upsert-only' to only create records, never delete
        - --registry=txt
        - --txt-prefix=reg-%{record_type}-
        - --interval=1m
      - name: hetzner-webhook
        image: ghcr.io/mconfalonieri/external-dns-hetzner-webhook:latest
        ports:
          - containerPort: 8080
            name: http
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
